--- a/View/Node/NodeEndMAAnswer.xaml
+++ b/View/Node/NodeEndMAAnswer.xaml
@@ -2,6 +2,75 @@
             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
             xmlns:v="clr-namespace:MultiBranchTexter.View"
-            Template="{StaticResource multiAnswerTemplate}"
             Loaded="NodeBase_Loaded">
+    <Grid Height="24">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="16"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+        <Button x:Name="maCloseBtn" Grid.Column="0" Width="0" Height="18"
+                IsEnabled="{Binding IsMouseOver, 
+            RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Grid}}}" 
+                HorizontalAlignment="Right">
+            <Button.Template>
+                <ControlTemplate TargetType="{x:Type Button}">
+                    <Border x:Name="maBd" CornerRadius="6,0,0,6" Background="{DynamicResource ThemeBrush}">
+                        <Path x:Name="CP" Stroke="{DynamicResource Foreground.ThemeBrush}" 
+                                  StrokeThickness="1" Data="M5,5 L13,13 M5,13 L13,5"/>
+                    </Border>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter Property="Background" Value="{StaticResource RedBrush}" TargetName="maBd"/>
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Button.Template>
+            <Button.Style>
+                <Style TargetType="{x:Type Button}">
+                    <Setter Property="Width" Value="0"/>
+                    <Style.Triggers>
+                        <Trigger Property="IsEnabled" Value="True">
+                            <Trigger.EnterActions>
+                                <BeginStoryboard>
+                                    <Storyboard>
+                                        <DoubleAnimation
+                                Storyboard.TargetProperty="(Button.Width)"
+                                To="16" Duration="0:0:0.2"/>
+                                    </Storyboard>
+                                </BeginStoryboard>
+                            </Trigger.EnterActions>
+                            <Trigger.ExitActions>
+                                <BeginStoryboard>
+                                    <Storyboard>
+                                        <DoubleAnimation
+                                Storyboard.TargetProperty="(Button.Width)"
+                                To="0" Duration="0:0:0.2"/>
+                                    </Storyboard>
+                                </BeginStoryboard>
+                            </Trigger.ExitActions>
+                        </Trigger>
+                    </Style.Triggers>
+                </Style>
+            </Button.Style>
+        </Button>
+        <Border x:Name="maBd"  Grid.Column="1"
+                BorderBrush="{DynamicResource ThemeBrush}" 
+                BorderThickness="1" CornerRadius="4">
+            <StackPanel Orientation="Horizontal">
+                <TextBox x:Name="hintTxt" Margin="2,2,0,2" ToolTip="{x:Null}" MinWidth="6"
+                             Template="{StaticResource operationTextBoxTemplate}"/>
+                <TextBox x:Name="answerTxt" Margin="0,2,8,2" Background="Transparent"/>
+            </StackPanel>
+            <Border.Style>
+                <Style TargetType="{x:Type Border}">
+                    <Setter Property="Background" Value="{DynamicResource NodeBgBrush}"/>
+                    <Style.Triggers>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter Property="Background" Value="{DynamicResource NodeBgHBrush}"/>
+                        </Trigger>
+                    </Style.Triggers>
+                </Style>
+            </Border.Style>
+        </Border>
+    </Grid>
 </v:NodeBase>
